--- a/CommaDelimiter/CommaDelimiter/CommaDelimiter.csproj
+++ b/CommaDelimiter/CommaDelimiter/CommaDelimiter.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
